Bug 165483 - FILEOPEN RTF style inherits attributes from parent wrongly
Summary: FILEOPEN RTF style inherits attributes from parent wrongly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords:
: 96276 164922 (view as bug list)
Depends on:
Blocks: RTF-Styles
  Show dependency treegraph
 
Reported: 2025-02-27 09:59 UTC by Oliver Specht (CIB)
Modified: 2025-04-09 15:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (1.48 KB, application/msword)
2025-02-27 09:59 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-02-27 09:59:44 UTC
Created attachment 199501 [details]
Bugdoc

Load the attached file.
The paragraphs should have single line spacing and no spacing below paragraph.

The attributes are set in the style "Normal Table Copy" but the style applied to the paragraph "Based On Table Normal Copy" does not repeat these attributes and should not inherit them from the style it inherits from.
Comment 1 Commit Notification 2025-03-07 14:45:31 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/38464825c8c80eed0d9b328a89cd96eb27175a0e

tdf#165483 style inherits only repated properties

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-03-07 18:58:16 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/480b3ba0e1e596547f2c1bbac132406567ec346d

tdf#165483 style inherits only repated properties

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gabor Kelemen (Collabora) 2025-03-26 17:39:08 UTC
*** Bug 96276 has been marked as a duplicate of this bug. ***
Comment 4 Gabor Kelemen (Collabora) 2025-04-03 14:48:29 UTC
*** Bug 164922 has been marked as a duplicate of this bug. ***