tdf#165483 style inherits only repated properties

Each attribute a style inherits from a parent style needs to be
repeated at that style. Otherwise it is overwritten by a default
attribute.

Change-Id: I9cef60b0d1eaa16d212f091434e9896bfd4a44c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182284
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182714
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>